<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Midterm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="travel_cost_calculation">Travel Cost Calculation</string>
    <string name="distance_miles">Distance (miles)</string>
    <string name="mpg">MPG</string>
    <string name="gas_price">Gas Price</string>
    <string name="cost">Cost</string>
    <string name="ten">10</string>
    <string name="fifty">50</string>
    <string name="one_dollar">$1</string>
    <string name="four_dollars">$4</string>

</resources>
