<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.deitel.midterm.MainActivity" >

    <TextView
        android:id="@+id/headlineTextView"
        android:layout_gravity="left"
        android:text="@string/travel_cost_calculation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/camaroImageView"
        android:layout_width="232dp"
        android:layout_height="170dp"
        android:layout_gravity="left"
        android:src="@drawable/camaro" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_gravity="left"
        android:text="@string/distance_miles"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/distanceEdit"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/distanceDisplay"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mpgTextView"
        android:layout_gravity="left"
        android:text="@string/mpg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/mpgSeekBar"
        android:layout_width="match_parent"
        android:layout_gravity="fill_horizontal"
        android:max="40"
        android:progress="20" />

    <TextView
        android:id="@+id/mpgMinTextView"
        android:layout_gravity="left"
        android:text="@string/ten"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gasPriceTextView"
        android:layout_gravity="left"
        android:layout_row="6"
        android:text="@string/gas_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/gasPriceSeekBar"
        android:layout_width="match_parent"
        android:layout_gravity="fill_horizontal"
        android:max="4"
        android:progress="2" />

    <TextView
        android:id="@+id/priceMinTextView"
        android:layout_gravity="left"
        android:text="@string/one_dollar"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/costTextView"
        android:layout_gravity="left"
        android:layout_row="9"
        android:text="@string/cost"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/costDisplay"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/holo_blue_light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mpgMaxTextView"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="6"
        android:text="@string/fifty"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/priceMaxTextView"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="9"
        android:text="@string/four_dollars"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</GridLayout>